--- a/SMLRcam/SMLRcam/en.lproj/MainStoryboard.storyboard
+++ b/SMLRcam/SMLRcam/en.lproj/MainStoryboard.storyboard
@@ -695,40 +695,61 @@
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <subviews>
                                     <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="location coords" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="f4P-hO-VzB">
-                                        <rect key="frame" x="20" y="0.0" width="136" height="25"/>
+                                        <rect key="frame" x="44" y="0.0" width="114" height="25"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <constraints>
-                                            <constraint firstAttribute="width" constant="136" id="M0q-sl-e0t"/>
+                                            <constraint firstAttribute="width" constant="114" id="M0q-sl-e0t"/>
                                             <constraint firstAttribute="height" constant="25" id="NuL-bq-38a"/>
                                         </constraints>
                                         <fontDescription key="fontDescription" type="system" pointSize="11"/>
                                         <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="date + time" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xfF-UK-JPe">
-                                        <rect key="frame" x="164" y="0.0" width="136" height="25"/>
+                                    <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="18 Dec, 2013 12:30pm" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xfF-UK-JPe">
+                                        <rect key="frame" x="190" y="0.0" width="110" height="25"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="25" id="VrO-aH-bLh"/>
-                                            <constraint firstAttribute="width" constant="136" id="iCz-gv-F0l"/>
+                                            <constraint firstAttribute="width" constant="110" id="iCz-gv-F0l"/>
                                         </constraints>
-                                        <fontDescription key="fontDescription" type="system" pointSize="11"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="10"/>
                                         <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                         <nil key="highlightedColor"/>
                                     </label>
+                                    <imageView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleAspectFit" image="locationIcon" translatesAutoresizingMaskIntoConstraints="NO" id="hsE-qZ-BWR">
+                                        <rect key="frame" x="20" y="4" width="16" height="16"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="16" id="C1H-v7-GaF"/>
+                                            <constraint firstAttribute="width" constant="16" id="Nn1-74-NW9"/>
+                                        </constraints>
+                                    </imageView>
+                                    <imageView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleAspectFit" image="clockIcon" translatesAutoresizingMaskIntoConstraints="NO" id="nTp-ib-jCw">
+                                        <rect key="frame" x="166" y="5" width="16" height="16"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="16" id="J2f-Bq-sRf"/>
+                                            <constraint firstAttribute="height" constant="16" id="Rbm-D7-H7Q"/>
+                                        </constraints>
+                                    </imageView>
                                 </subviews>
                                 <color key="backgroundColor" white="0.66666666666666663" alpha="0.75" colorSpace="calibratedWhite"/>
                                 <color key="tintColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                                 <constraints>
+                                    <constraint firstItem="hsE-qZ-BWR" firstAttribute="top" secondItem="563-iW-xYn" secondAttribute="top" constant="4" id="0MA-6A-pWA"/>
                                     <constraint firstItem="xfF-UK-JPe" firstAttribute="top" secondItem="563-iW-xYn" secondAttribute="top" id="CFq-Wx-bCs"/>
-                                    <constraint firstItem="xfF-UK-JPe" firstAttribute="leading" secondItem="f4P-hO-VzB" secondAttribute="trailing" constant="8" id="IJo-Qi-jzN"/>
+                                    <constraint firstItem="nTp-ib-jCw" firstAttribute="top" secondItem="563-iW-xYn" secondAttribute="top" constant="5" id="Esj-Jt-kYn"/>
+                                    <constraint firstAttribute="bottom" secondItem="nTp-ib-jCw" secondAttribute="bottom" constant="4" id="LOu-rt-GbW"/>
+                                    <constraint firstItem="f4P-hO-VzB" firstAttribute="leading" secondItem="hsE-qZ-BWR" secondAttribute="trailing" constant="8" id="QNA-52-lYV"/>
                                     <constraint firstAttribute="bottom" secondItem="f4P-hO-VzB" secondAttribute="bottom" id="YK6-Vz-dZI"/>
                                     <constraint firstAttribute="width" constant="320" id="ahq-qi-XF5"/>
                                     <constraint firstAttribute="bottom" secondItem="xfF-UK-JPe" secondAttribute="bottom" id="eOi-Fo-ZMl"/>
-                                    <constraint firstItem="f4P-hO-VzB" firstAttribute="leading" secondItem="563-iW-xYn" secondAttribute="leading" constant="20" id="fVV-yl-Mer"/>
+                                    <constraint firstItem="nTp-ib-jCw" firstAttribute="leading" secondItem="f4P-hO-VzB" secondAttribute="trailing" constant="8" id="eSL-tb-2g5"/>
                                     <constraint firstAttribute="height" constant="25" id="faU-Ng-gNT"/>
-                                    <constraint firstAttribute="trailing" secondItem="xfF-UK-JPe" secondAttribute="trailing" constant="20" id="st0-6F-bFC"/>
-                                    <constraint firstItem="xfF-UK-JPe" firstAttribute="leading" secondItem="f4P-hO-VzB" secondAttribute="trailing" constant="8" id="tnS-qS-YP1"/>
+                                    <constraint firstAttribute="bottom" secondItem="hsE-qZ-BWR" secondAttribute="bottom" constant="5" id="lQE-Va-tU8"/>
+                                    <constraint firstAttribute="trailing" secondItem="xfF-UK-JPe" secondAttribute="trailing" constant="20" id="laO-iS-lkS"/>
+                                    <constraint firstItem="xfF-UK-JPe" firstAttribute="leading" secondItem="nTp-ib-jCw" secondAttribute="trailing" constant="8" id="pPI-Vk-a42"/>
+                                    <constraint firstItem="hsE-qZ-BWR" firstAttribute="leading" secondItem="563-iW-xYn" secondAttribute="leading" constant="20" id="w8S-7O-zQU"/>
                                     <constraint firstItem="f4P-hO-VzB" firstAttribute="top" secondItem="563-iW-xYn" secondAttribute="top" id="wtd-3j-RIw"/>
                                 </constraints>
                             </view>
@@ -767,7 +788,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Yl2-rb-LWP" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="708" y="-667"/>
+            <point key="canvasLocation" x="844" y="56"/>
         </scene>
         <!--Flux Camera View Controller-->
         <scene sceneID="Zpu-ee-Ste">
@@ -789,7 +810,7 @@
                                     <constraint firstAttribute="width" constant="33" id="oaR-b6-eMb"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
-                                <state key="normal" title="Button" image="BD44AF75-1BE7-4224-8BEE-6D947086883A">
+                                <state key="normal" title="Button" image="ECBCAFC5-6613-4C8A-A53E-1D07D5DBCF1E">
                                     <color key="titleColor" red="0.19607843459999999" green="0.30980393290000002" blue="0.52156865600000002" alpha="1" colorSpace="calibratedRGB"/>
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
@@ -915,7 +936,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="GNa-PL-8tC" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="876" y="56"/>
+            <point key="canvasLocation" x="438" y="56"/>
         </scene>
         <!--Flux Map View Controller-->
         <scene sceneID="JdW-hK-6ai">
@@ -932,6 +953,7 @@
                             <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="hT0-9E-Cfm">
                                 <rect key="frame" x="0.0" y="0.0" width="568" height="320"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                <gestureRecognizers/>
                             </mapView>
                             <view alpha="0.79999999999999982" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Zpg-FP-Bvy">
                                 <rect key="frame" x="20" y="20" width="528" height="41"/>
@@ -962,10 +984,10 @@
                                         </constraints>
                                     </imageView>
                                     <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Loading ..." textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JmX-7R-HAO">
-                                        <rect key="frame" x="86" y="0.0" width="148" height="41"/>
+                                        <rect key="frame" x="86" y="0.0" width="145" height="41"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <constraints>
-                                            <constraint firstAttribute="width" constant="148" id="5My-hk-wPf"/>
+                                            <constraint firstAttribute="width" constant="145" id="5My-hk-wPf"/>
                                             <constraint firstAttribute="height" constant="41" id="rj0-Pn-dN5"/>
                                         </constraints>
                                         <fontDescription key="fontDescription" type="boldSystem" pointSize="12"/>
@@ -973,7 +995,7 @@
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <imageView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" image="headerSeperator" translatesAutoresizingMaskIntoConstraints="NO" id="hi6-bU-OIS">
-                                        <rect key="frame" x="242" y="5" width="3" height="31"/>
+                                        <rect key="frame" x="239" y="5" width="3" height="31"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="3" id="6Uu-Nq-Wy8"/>
@@ -981,7 +1003,7 @@
                                         </constraints>
                                     </imageView>
                                     <imageView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" image="filter_Events" translatesAutoresizingMaskIntoConstraints="NO" id="zwz-vg-UUg">
-                                        <rect key="frame" x="253" y="0.0" width="29" height="41"/>
+                                        <rect key="frame" x="250" y="0.0" width="29" height="41"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="29" id="2QT-qY-R5T"/>
@@ -989,10 +1011,10 @@
                                         </constraints>
                                     </imageView>
                                     <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Jun 16,2013" textAlignment="center" lineBreakMode="wordWrap" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="91t-QI-bo7">
-                                        <rect key="frame" x="290" y="0.0" width="72" height="41"/>
+                                        <rect key="frame" x="287" y="0.0" width="75" height="41"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <constraints>
-                                            <constraint firstAttribute="width" constant="72" id="IBG-Sa-nG0"/>
+                                            <constraint firstAttribute="width" constant="75" id="IBG-Sa-nG0"/>
                                             <constraint firstAttribute="height" constant="41" id="Ywu-gZ-Pdj"/>
                                         </constraints>
                                         <fontDescription key="fontDescription" type="boldSystem" pointSize="12"/>
@@ -1121,7 +1143,7 @@
         </scene>
     </scenes>
     <resources>
-        <image name="BD44AF75-1BE7-4224-8BEE-6D947086883A" width="30.239999771118164" height="30.239999771118164">
+        <image name="ECBCAFC5-6613-4C8A-A53E-1D07D5DBCF1E" width="30.239999771118164" height="30.239999771118164">
             <mutableData key="keyedArchiveRepresentation">
 YnBsaXN0MDDUAQIDBAUGOzxYJHZlcnNpb25YJG9iamVjdHNZJGFyY2hpdmVyVCR0b3ASAAGGoK0HCBEW
 GxwgISksLzU4VSRudWxs1AkKCwwNDg8QViRjbGFzc1xOU0ltYWdlRmxhZ3NWTlNSZXBzV05TQ29sb3KA
